--- a/style.css
+++ b/style.css
@@ -13,8 +13,14 @@
     --cor0: #F2E7DC;
     --cor1: #F2B279;
     --cor2: #F2913D;
+    --cor2-1: #f2913d83;
     --cor3: #F27405;
     --cor4: #F25C05;
+    --cor5: #1d1d1d;
+}
+button{
+    cursor: pointer;
+    border: none;
 }
         /*HEADER*/
 header{
@@ -51,6 +57,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
     background-color: var(--cor0);
     color: var(--cor3);
 }
@@ -89,12 +96,11 @@ header{
 #about{
     height: 60vh;
     padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
     align-items: center;
-}
-#about-txt{
-    margin-left: 300px;
+    justify-content: center;
+    align-items: center;
+    color: var(--cor5);
 }
 #about-h1{
     font-size: 1.8em;
@@ -107,8 +113,6 @@ header{
     padding: 20px;
     color: var(--cor0);
     border-radius: 8px;
-    border: none;
-    cursor: pointer;
 }
 .about-btn:hover{
     transform: scale(1.2);
@@ -120,16 +124,100 @@ header{
 }
 #about-a-buy{
     background-color: var(--cor3);
-    margin: 10px;
+    margin: 20px;
 }
 #about-img{
-    width: 80%;
+    margin-left: 5px;
+    width: 40%;
 }
 #about-img-img{
     width: 100%;
 }
     /*FEATURES*/
+#features{
+    height: 70vh;
+    background-color: var(--cor0);
+    color:var(--cor4);
+    padding: 20px;
+}
+#features-h1{
+    text-align: center;
+}
 #features-description{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.features-description-divall{
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    padding: 10px;
+    background-color: var(--cor2-1);
+    text-align: justify;
+}
+.features-description-divall-h1{
+    text-align: center;
+}
+    /*OPINIÕES*/
+#opinions{
+    padding: 20px;
+    color: var(--cor5);
+}
+#opinions-h1{
+    text-align: center;
+}
+#opinions-div{
+    width: 70%;
+    margin: 0 auto;
+}
+#opinions-btn-left{
+    position: relative;
+    bottom: 80px;
+}
+#opinions-btn-right{
+    position: relative;
+    bottom: 80px;
+    left: 1220px;
+}
+        /*FOOTER*/
+footer{
+    background-color: var(--cor3);
+    padding: 40px;
+    color: var(--cor-comp0);
+    display: flex;
+    flex-direction: column;
+}
+#footer-logo > img{
+    display: block;
+    margin: 0 auto;
+}
+#footer-redes{
+    margin-bottom: 20px;
+}
+.fa-brands{
+    color: var(--cor1);
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+#footer-links{
+    display: flex;
+    justify-content: center;
+}
+#footer-links-suporte,
+#footer-links-sobre{
+    margin: 20px;
+}
+#footer-links a{
+    color: var(--cor-comp0);
+    text-decoration: none;
+}
+.footer-links-item-title{
+    margin-bottom: 5px;
+}
+#footer-links-suporte li{
+    margin-bottom: 8px;
+}
+#footer-links-sobre li{
+    margin-bottom: 8px;
 }
