Incorporação do video pitch
e alteração do carrossel

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header{
 }
     /*ABOUT*/
 #about{
+    background-color: var(--cor0);
     height: 60vh;
     padding: 20px;
     display: flex;
@@ -139,10 +140,15 @@ header{
 #about-img-img{
     width: 100%;
 }
+#video{
+    display: flex;
+    justify-content: center;
+    background-color: var(--cor0);
+    padding-bottom: 20px;
+}
     /*FEATURES*/
 #features{
     height: 80%;
-    background-color: var(--cor0);
     color:var(--cor4);
     padding: 20px;
 }
